# IIDXStreamManager

./: .gitignore  README.md  TODO.md  binarize_fonts.py  modify_annotations.py  roi_selector.py
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  (+2 more)
iidx_bpl_scoreboard/: PROTOCOL.md  README.md  app.js  config.json  index.html  package-lock.json  server.py  style.css  websocket-server.js.notused
iidx_knockout_scoreboard/: README.md  TODO.md  app.js  app.test.js  index.html  package-lock.json  server.py  style.css  testbench.py
iidx_score_reco/: CLAUDE.md  README.md  recognizer.py  rois.csv  serve.py  test.py
iidx_state_machine/: CLAUDE.md  README.md  result.txt  state_machine.py  state_machine.yaml  test_client.py  test_input.txt  test_state_machine_manager.py
iidx_state_reco/: CLAUDE.md  annotate.py  classifier.labels.txt  classifier.onnx  export_onnx.py  infer.py  infer_onnx.py  serve.py  tags.txt  train.py  webapp.py
iidx_stream_state_machine/: CLAUDE.md  pyproject.toml  test_with_real_data.py
iidx_stream_state_machine/src/: __init__.py  config.py  demo.py  integration.py  state_machine.py
iidx_stream_state_machine/tests/: test_state_machine.py
iidx_tpl_design_rules/: README.md
iidx_tpl_manager/: CLAUDE.md
obs_manager/: README.md  README_WEB_MONITOR.md  __init__.py  monitor_config.json  obs_manager.py  start_monitor.sh  test_obs_manager.py  test_score_reco.py  web_monitor.py
tests/: test_config_models.py
(+121 files in other folders)
