[project]
name = "iidx-stream-state-machine"
version = "0.1.0"
description = "IIDX game state machine for OBS scene switching"
readme = "CLAUDE.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
obs = ["simpleobsws>=1.0.0"]
dev = ["pytest>=7.0.0", "ruff>=0.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D"]
ignore = ["D100", "D104"]
